<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_robot_dashboard</name>
  <version>0.5.8</version>
  <description>rqt_robot_dashboard provides an infrastructure for building robot dashboard plugins in rqt.</description>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_robot_dashboard</url>
  <url type="repository">https://github.com/ros-visualization/rqt_robot_dashboard</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_robot_dashboard/issues</url>

  <author>Ze'ev Klapow</author>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend version_gte="0.3.1">rqt_console</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_nav_view</exec_depend>
  <exec_depend>rqt_robot_monitor</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
